--- a/alerta/app/templates/index.html
+++ b/alerta/app/templates/index.html
@@ -11,10 +11,9 @@
 <h2>Examples</h2>
 <p>Some basic examples of using the API are:
 <ul>
-    <li> <a href="/alerta/api/v2/alerts">Alerts</a>
-    <li> <a href="/alerta/api/v2/alerts/counts">Alert counts</a>
-    <li> <a href="/alerta/api/v2/resources">Resources</a>
-    <li> <a href="/alerta/api/v2/heartbeats">Heartbeats</a>
+    <li> <a href="/api/alerts">Alerts</a>
+    <li> <a href="/api/alert/counts">Alert counts</a>
+    <li> <a href="/api/heartbeats">Heartbeats</a>
 </ul>
 
 <h2>Query parameters</h2>
